# portfolio-nextjs

./: .env.temp  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  README.md  actions.yaml  entrypoint.sh  eslint.config.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  sample.csv  sample.xlsx  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
cmd/: MediumPoster.py  main.py  post.py  post_medium.py  post_status_scraper.py  publish_to_medium.py  sample.csv  sample.xlsx  status_check.sh
posts/: 0_sample.md  10_SWE_Internship.md  11_ACM_Research_Lab.md  12_ML_internship_LinkX.md  13_LLm_Law_Hackathon_Stanford.md  14_5_things_hackathon_and_startup.md  15_Takeaway_from_SWE_internship.md  16_Hackathon_Startup 101.md  17_Human_Factors_Formal_Methods.md  18_System Error.md  19_X_Developer_Project.md  1_Symposium_Cyberwarfare.md  20_After_X_Developer_Project.md  21_The_Benefits_of_not_Believing_that_AI_Exists.md  22_frontend_internship_yumemi.md  2_Electric_Sheep.md  3_Qiita_FastDoctor.md  4_CruzHack_Sitegeist.md  5_Definition_of_RAG.md  6_Hallucination_Mitigation_Technique_RAG.md  7_Different_ssh_settings.md  8_React_Hooks.md  9_README_for_team.md  pnpm_installation_on_Mac.md  sample.csv  sample.md  sample.xlsx
posts-idea/: blog4.md
project/: project1.md  project2.md  project3.md  project4.md  project5.md  project_sample.md
public/: resume.json
script/: ImagePush.py  MarkdownImageUploader.py  PostsStatus.py  push_image_to_github.py  sample.csv  sample.xlsx
scripts/: post_status_scraper.py
(+96 files in other folders)
