[tool.poetry]
name = "portfolio-nextjs"
version = "0.1.0"
description = ""
authors = ["github-actions <jojoto8845@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
openpyxl = "^3.1.2"
pygithub = "^2.3.0"
markdown = "^3.6"
git-python = "^1.0.3"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
